Fixed skills holder spacing

--- a/src/components/skills/skills.sass
+++ b/src/components/skills/skills.sass
@@ -44,7 +44,7 @@
 @media (max-width: 767px)
   #skills
     .skills-holder
-      margin: 12px -2px
+      margin: 10px -2px
       .skill
         margin: 6px 4px
         padding: 11px 14px
@@ -54,7 +54,7 @@
 @media (max-width: 361px)
   #skills
     .skills-holder
-      margin: 12px -1px
+      margin: 8px -1px
       .skill
         margin: 5px 3px
         padding: 9px 12px
